--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="C:/Users/Stijn/Downloads/worldedit-bukkit-6.1.7.3.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Stijn/Downloads/worldguard-bukkit-6.2.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Stijn/Downloads/MinetopiaSDBRel (10).jar"/>
+	<classpathentry kind="lib" path="C:/Users/Stijn/Downloads/citizens-2.0.24-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
