--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -5,6 +5,7 @@ author: MrWouter
 description: Farms en Mines
 main: nl.wouter.minetopiafarms.Main
 loadbefore: [WorldGuard]
+depend: [Citizens, WorldGuard, WorldEdit, Vault, MinetopiaSDB]
 commands:
      kies:
      minetopiafarms:
