--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -4,9 +4,8 @@ api-version: 1.13
 author: MrWouter
 description: 'MinetopiaFarms is een gemakkelijke manier om beroepen aan jouw server toe te voegen!'
 main: nl.wouter.minetopiafarms.Main
-loadbefore: [WorldGuard]
-depend: [WorldGuard, WorldEdit, Vault, MinetopiaSDB]
-soft-depend: [Citizens]
+depend: [WorldGuard, WorldEdit, Vault]
+soft-depend: [Citizens, MinetopiaSDB]
 commands:
      kies:
      minetopiafarms:
