--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,11 +1,11 @@
 name: MinetopiaFarms
-version: 2.5
+version: 2.6
 api-version: 1.13
 author: MrWouter
 description: 'MinetopiaFarms is een gemakkelijke manier om beroepen aan jouw server toe te voegen!'
 main: nl.wouter.minetopiafarms.Main
-depend: [WorldGuard, WorldEdit, Vault]
-soft-depend: [Citizens, MinetopiaSDB]
+soft-depend: [Citizens, MinetopiaSDB, WorldGuard, WorldEdit, Vault]
+loadbefore: [WorldGuard]
 commands:
      kies:
      minetopiafarms:
