--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -3,7 +3,7 @@ version: 2.7
 api-version: 1.13
 author: MrWouter
 description: 'MinetopiaFarms is een gemakkelijke manier om beroepen aan jouw server toe te voegen!'
-main: nl.wouter.minetopiafarms.Main
+main: nl.mrwouter.minetopiafarms.Main
 soft-depend: [Citizens, MinetopiaSDB, WorldGuard, WorldEdit, Vault]
 loadbefore: [WorldGuard]
 commands:
