Added 1.14 support, fixed a ton of issues.

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
 					<exclude>**/*.java</exclude>
 				</excludes>
 			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+				<includes>
+					<include>plugin.yml</include>
+				</includes>
+			</resource>
 		</resources>
 		<plugins>
 			<plugin>
