--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nl.mrwouter</groupId>
 	<artifactId>minetopiafarms</artifactId>
@@ -37,21 +35,15 @@
 	<repositories>
 		<repository>
 			<id>spigot-repo</id>
-			<url>
-https://hub.spigotmc.org/nexus/content/repositories/snapshots/
-</url>
+			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
 		</repository>
 		<repository>
 			<id>bungeecord-repo</id>
-			<url>
-https://oss.sonatype.org/content/repositories/snapshots
-</url>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</repository>
 		<repository>
 			<id>vault-repo</id>
-			<url>
-http://nexus.hc.to/content/repositories/pub_releases
-</url>
+			<url>http://nexus.hc.to/content/repositories/pub_releases</url>
 		</repository>
 		<repository>
 			<id>sk89q-repo</id>
@@ -70,7 +62,7 @@ http://nexus.hc.to/content/repositories/pub_releases
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
-			<version>1.14.4-R0.1-SNAPSHOT</version>
+			<version>1.15.2-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -99,9 +91,9 @@ http://nexus.hc.to/content/repositories/pub_releases
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>nl.mrwouter</groupId>
-			<artifactId>minetopiasdb</artifactId>
-			<version>1.28.1</version>
+			<groupId>nl.minetopiasdb</groupId>
+			<artifactId>plugin</artifactId>
+			<version>2.0.4</version>
 			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
