--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,9 @@
 	<artifactId>minetopiafarms</artifactId>
 	<version>2.8</version>
 	<name>MinetopiaFarms</name>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<resources>
