--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
-			<version>1.14.4-R0.1-SNAPSHOT</version>
+			<version>1.16.1-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -99,9 +99,9 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>nl.mrwouter</groupId>
-			<artifactId>minetopiasdb</artifactId>
-			<version>1.28.1</version>
+			<groupId>nl.minetopiasdb</groupId>
+			<artifactId>plugin</artifactId>
+			<version>2.1</version>
 			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
