--- a/pom.xml
+++ b/pom.xml
@@ -34,16 +34,16 @@
 		<repository>
 			<id>vault-repo</id>
 			<url>
-				http://nexus.hc.to/content/repositories/pub_releases
+				https://nexus.hc.to/content/repositories/pub_releases
 			</url>
 		</repository>
 		<repository>
-			<id>sk89q-repo</id>
-			<url>http://maven.sk89q.com/repo/</url>
+			<id>enginehub-maven</id>
+			<url>https://maven.enginehub.org/repo/</url>
 		</repository>
 		<repository>
 			<id>everything</id>
-			<url>http://repo.citizensnpcs.co/</url>
+			<url>https://repo.citizensnpcs.co/</url>
 		</repository>
 		<repository>
 			<id>mrwouter-repo</id>
@@ -51,7 +51,7 @@
 		</repository>
 		<repository>
 			<id>CodeMC</id>
-			<url>https://repo.codemc.org/repository/maven-public</url>
+			<url>https://repo.codemc.org/repository/maven-public/</url>
 		</repository>
 	</repositories>
 	<dependencies>
@@ -60,6 +60,30 @@
 			<artifactId>spigot-api</artifactId>
 			<version>1.16.1-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.sk89q.worldguard</groupId>
+			<artifactId>worldguard-legacy</artifactId>
+			<version>6.2</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>nl.mrwouter</groupId>
+			<artifactId>worldguard_core</artifactId>
+			<version>1.0</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>nl.mrwouter</groupId>
+			<artifactId>worldguard_6</artifactId>
+			<version>1.0</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>nl.mrwouter</groupId>
+			<artifactId>worldguard_7</artifactId>
+			<version>1.0</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.sk89q.worldguard</groupId>
@@ -89,7 +113,7 @@
 		<dependency>
 			<groupId>nl.minetopiasdb</groupId>
 			<artifactId>plugin</artifactId>
-			<version>2.2</version>
+			<version>2.4.4</version>
 			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
@@ -101,8 +125,13 @@
 		</dependency>
 		<dependency>
 			<groupId>io.github.bananapuncher714</groupId>
-			<artifactId>NBTEditor</artifactId>
-			<version>7.16</version>
+			<artifactId>nbteditor</artifactId>
+			<version>7.18.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.cryptomorin</groupId>
+			<artifactId>XSeries</artifactId>
+			<version>8.7.0</version>
 		</dependency>
 	</dependencies>
 </project>
