--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,10 @@
 									<pattern>io.github.bananapuncher714</pattern>
 									<shadedPattern>nl.mrwouter.minetopiafarms.shaded.bananapuncher714</shadedPattern>
 								</relocation>
+								<relocation>
+									<pattern>nl.mrwouter.worldguard_</pattern>
+									<shadedPattern>nl.mrwouter.minetopiafarms.shaded.worldguard_</shadedPattern>
+								</relocation>
 							</relocations>
 						</configuration>
 					</execution>
@@ -156,11 +160,13 @@
 			<groupId>io.github.bananapuncher714</groupId>
 			<artifactId>nbteditor</artifactId>
 			<version>7.18.1</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.github.cryptomorin</groupId>
 			<artifactId>XSeries</artifactId>
 			<version>8.7.0</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 </project>
