--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,8 +4,8 @@ api-version: 1.13
 author: MrWouter
 description: 'MinetopiaFarms is een gemakkelijke manier om beroepen aan jouw server toe te voegen!'
 main: nl.mrwouter.minetopiafarms.Main
-softdepend: [Citizens, MinetopiaSDB, WorldGuard, WorldEdit, Vault]
-loadbefore: [WorldGuard]
+depend: [WorldEdit, WorldGuard, Vault, MinetopiaSDB]
+softdepend: [Citizens]
 commands:
      kies:
      minetopiafarms:
