--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>nl.mrwouter</groupId>
 	<artifactId>minetopiafarms</artifactId>
-	<version>2.12</version>
+	<version>2.13</version>
 	<name>MinetopiaFarms</name>
 	<build>
 		<resources>
@@ -55,8 +55,8 @@
 									<shadedPattern>nl.mrwouter.minetopiafarms.shaded.xseries</shadedPattern>
 								</relocation>
 								<relocation>
-									<pattern>io.github.bananapuncher714</pattern>
-									<shadedPattern>nl.mrwouter.minetopiafarms.shaded.bananapuncher714</shadedPattern>
+									<pattern>com.saicone.rtag</pattern>
+									<shadedPattern>nl.mrwouter.minetopiafarms.shaded.rtag</shadedPattern>
 								</relocation>
 								<relocation>
 									<pattern>nl.mrwouter.worldguard_</pattern>
@@ -98,12 +98,16 @@
 			<id>CodeMC</id>
 			<url>https://repo.codemc.org/repository/maven-public/</url>
 		</repository>
+		<repository>
+			<id>jitpack</id>
+			<url>https://jitpack.io</url>
+		</repository>
 	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
-			<version>1.20.4-R0.1-SNAPSHOT</version>
+			<version>1.21-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<!-- <world*>  -->
@@ -154,7 +158,7 @@
 		<dependency>
 			<groupId>nl.minetopiasdb</groupId>
 			<artifactId>plugin</artifactId>
-			<version>2.6</version>
+			<version>2.7.1</version>
 			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
@@ -165,15 +169,21 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>io.github.bananapuncher714</groupId>
-			<artifactId>nbteditor</artifactId>
-			<version>7.19.1</version>
+			<groupId>com.github.cryptomorin</groupId>
+			<artifactId>XSeries</artifactId>
+			<version>11.2.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.github.cryptomorin</groupId>
-			<artifactId>XSeries</artifactId>
-			<version>9.8.0</version>
+			<groupId>com.saicone.rtag</groupId>
+			<artifactId>rtag</artifactId>
+			<version>1.5.4</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.saicone.rtag</groupId>
+			<artifactId>rtag-item</artifactId>
+			<version>1.5.4</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
